MEN-3598 assign z-index to ensure tooltips overlay content Changelog: None

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -711,6 +711,8 @@ ul.link-list {
   pointer-events: auto;
   box-shadow: 0 1px 6px rgba(0, 0, 0, 0.15);
   position: absolute;
+  z-index: 1500;
+
   a {
     color: @placeholder;
     text-decoration: underline;
